--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/redux-persist": "^4.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
